manifests/deployment_back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-backend
  template:
    metadata:
      labels:
        app: todo-app-backend
    strategy: 
      type:  "Recreate"
    spec:
      containers:
        - name: todo-app-backend
          image: PROJECT/IMAGE_BE
