manifests/deployment_broadcast.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcast-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:  
        - name: broadcaster
          image: PROJECT/IMAGE_BD
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
