manifests/service_mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: project
  labels:
    app: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
